[tool.poetry]
name = "lyra-orm"
version = "0.1.0"
description = "A ORM for lyra database, with models, schema and more."
authors = ["Eric Souza <ericsouza0801@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
SQLAlchemy = "^1.3.16"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
